# Electricity-Demand-Forecasting-in-France.

./: .gitignore  README PART DEEP LEARNING.md  README.md  data_challenge_deep_learning_lahoz_marcos (1).py  predict (1).py  predict.py  pyproject.toml  requirements.txt  train (1).py  train.py
docs/: report.tex
scripts/: evaluate.py  make_submission.py  prepare_data.py
src/edf/: __init__.py  data.py  features.py  metrics.py  models.py  pipeline.py  utils.py
tests/: test_metrics.py  test_models.py
