[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edf"
version = "0.1.0"
description = "Electricity demand forecasting for France (regions + métropoles) from weather and calendar features, evaluated with the Codabench sum-of-RMSE metric."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcos Lahoz" }]
keywords = ["time-series", "forecasting", "energy", "electricity-demand", "PyTorch", "gradient-boosting"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "holidays>=0.40",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/mlahozy21/Electricity-Demand-Forecasting-in-France."

[tool.setuptools.packages.find]
where = ["src"]
